Make sure images of testimonials don't cause the names to get squished. Remove cdata tag which caused an error in sitecontrol.

--- a/public/style.scss
+++ b/public/style.scss
@@ -157,6 +157,9 @@ body.noselect {
 			background: unset;
 			margin: auto;
 		}
+		.ContentItem[real_id="Image"] {
+			width: auto !important;
+		}
 		a:-webkit-any-link {
 			text-decoration: none;
 		}
